# GhosttyPet

./: .gitignore  README.md
GhosttyPet/: Info.plist  Makefile  README.md
GhosttyPet/src/: PetView.h  PetView.m  main.m
GhosttyPet/tests/: test_bundle.sh
GhosttyPetWin/: Cargo.toml  README.md
GhosttyPetWin/src/: main.rs
docs/superpowers/plans/: 2026-06-16-ghostty-pet.md
docs/superpowers/specs/: 2026-06-16-ghostty-pet-design.md
